{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 256,
  "lineage": "6ca6ccd1-db0f-81c1-9ee8-9010031aa8f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590852515231:listener/app/alb-av/1f944bc8c41f01f3/c10e61432d5b9a6b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590852515231:targetgroup/albtg-av/65d95347dc852b6d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590852515231:listener/app/alb-av/1f944bc8c41f01f3/c10e61432d5b9a6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:590852515231:loadbalancer/app/alb-av/1f944bc8c41f01f3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.pubsub",
            "aws_vpc.main",
            "aws_lb.alb",
            "aws_lb_target_group.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:internet-gateway/igw-0101b25e4087d21c0",
            "id": "igw-0101b25e4087d21c0",
            "owner_id": "590852515231",
            "tags": {
              "Name": "ig_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "ig_av",
              "Owner": "arajkumar@presidio.com"
            },
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590852515231:loadbalancer/app/alb-av/1f944bc8c41f01f3",
            "arn_suffix": "app/alb-av/1f944bc8c41f01f3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-av-1317764561.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:590852515231:loadbalancer/app/alb-av/1f944bc8c41f01f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-av",
            "security_groups": [
              "sg-0009672f7a72c9036"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0294d448b9df8c4ff"
              },
              {
                "subnet_id": "subnet-0fe03437b2af0148f"
              }
            ],
            "subnets": [
              "subnet-0294d448b9df8c4ff",
              "subnet-0fe03437b2af0148f"
            ],
            "tags": {
              "Name": "alb_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "alb_av",
              "Owner": "arajkumar@presidio.com"
            },
            "vpc_id": "vpc-0eee1c520f188a255",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_security_group.sg",
            "aws_subnet.pubsub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590852515231:targetgroup/albtg-av/65d95347dc852b6d",
            "arn_suffix": "targetgroup/albtg-av/65d95347dc852b6d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590852515231:targetgroup/albtg-av/65d95347dc852b6d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "albtg-av",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alb_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "alb_av",
              "Owner": "arajkumar@presidio.com"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590852515231:targetgroup/albtg-av/65d95347dc852b6d-20211209121752231700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590852515231:targetgroup/albtg-av/65d95347dc852b6d",
            "target_id": "i-05396b2791e5a5b55"
          },
          "dependencies": [
            "aws_db_instance.db",
            "aws_lb_target_group.web_server",
            "aws_security_group.sg",
            "aws_subnet.pubsub",
            "module.ec2_web.aws_instance.web_server"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590852515231:targetgroup/albtg-av/65d95347dc852b6d-20211209121752240600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590852515231:targetgroup/albtg-av/65d95347dc852b6d",
            "target_id": "i-07185cb0233c648c0"
          },
          "dependencies": [
            "aws_db_instance.db",
            "aws_lb_target_group.web_server",
            "aws_security_group.sg",
            "aws_subnet.pubsub",
            "module.ec2_web.aws_instance.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pubrt_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0101b25e4087d21c0",
            "id": "r-rtb-0ca8b2dd1365afe091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca8b2dd1365afe09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.pubrt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:route-table/rtb-01e26d9784fd05797",
            "id": "rtb-01e26d9784fd05797",
            "owner_id": "590852515231",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privrt_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "privrt_av",
              "Owner": "arajkumar@presidio.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:route-table/rtb-0ca8b2dd1365afe09",
            "id": "rtb-0ca8b2dd1365afe09",
            "owner_id": "590852515231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0101b25e4087d21c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubrt_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "pubrt_av",
              "Owner": "arajkumar@presidio.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_one",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd67179438670d13",
            "route_table_id": "rtb-01e26d9784fd05797",
            "subnet_id": "subnet-0c9070e35affc33a6"
          },
          "dependencies": [
            "aws_subnet.privsub",
            "aws_vpc.main",
            "aws_route_table.privrt"
          ]
        },
        {
          "index_key": "subnet_two",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd821ee01f5d839b",
            "route_table_id": "rtb-01e26d9784fd05797",
            "subnet_id": "subnet-0f2572d1969388852"
          },
          "dependencies": [
            "aws_route_table.privrt",
            "aws_subnet.privsub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_one",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03868d4995f857900",
            "route_table_id": "rtb-0ca8b2dd1365afe09",
            "subnet_id": "subnet-0fe03437b2af0148f"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_route_table.pubrt",
            "aws_subnet.pubsub"
          ]
        },
        {
          "index_key": "subnet_two",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0268129109b40cd14",
            "route_table_id": "rtb-0ca8b2dd1365afe09",
            "subnet_id": "subnet-0294d448b9df8c4ff"
          },
          "dependencies": [
            "aws_route_table.pubrt",
            "aws_subnet.pubsub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:security-group/sg-07b480bf9c83d430a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07b480bf9c83d430a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "590852515231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "rds_sg",
              "Owner": "arajkumar@presidio.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:security-group/sg-0009672f7a72c9036",
            "description": "Security group for web server with ssh allowed",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0009672f7a72c9036",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web_server",
            "name_prefix": "",
            "owner_id": "590852515231",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_one",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:subnet/subnet-0c9070e35affc33a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "27.0.3.0/24",
            "id": "subnet-0c9070e35affc33a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590852515231",
            "tags": {
              "Name": "privsub_one_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "privsub_one_av",
              "Owner": "arajkumar@presidio.com"
            },
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_two",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:subnet/subnet-0f2572d1969388852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "27.0.4.0/24",
            "id": "subnet-0f2572d1969388852",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590852515231",
            "tags": {
              "Name": "privsub_two_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "privsub_two_av",
              "Owner": "arajkumar@presidio.com"
            },
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_one",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:subnet/subnet-0fe03437b2af0148f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "27.0.1.0/24",
            "id": "subnet-0fe03437b2af0148f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590852515231",
            "tags": {
              "Name": "pubsub_one_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "pubsub_one_av",
              "Owner": "arajkumar@presidio.com"
            },
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet_two",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:subnet/subnet-0294d448b9df8c4ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "27.0.2.0/24",
            "id": "subnet-0294d448b9df8c4ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590852515231",
            "tags": {
              "Name": "pubsub_two_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "pubsub_two_av",
              "Owner": "arajkumar@presidio.com"
            },
            "vpc_id": "vpc-0eee1c520f188a255"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590852515231:vpc/vpc-0eee1c520f188a255",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "27.0.0.0/16",
            "default_network_acl_id": "acl-0c28373f22c06e7eb",
            "default_route_table_id": "rtb-04a01274ab8a1cfd8",
            "default_security_group_id": "sg-026f74ad4c8a40eea",
            "dhcp_options_id": "dopt-0208d1c78e9235a66",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eee1c520f188a255",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04a01274ab8a1cfd8",
            "owner_id": "590852515231",
            "tags": {
              "Name": "main_av",
              "Owner": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "main_av",
              "Owner": "arajkumar@presidio.com"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:590852515231:instance/i-05396b2791e5a5b55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05396b2791e5a5b55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arajkumar",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b050a3a76652fd68",
            "private_dns": "ip-27-0-1-69.us-east-2.compute.internal",
            "private_ip": "27.0.1.69",
            "public_ip": "18.118.207.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff7d1efad6928cf7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0009672f7a72c9036"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe03437b2af0148f",
            "tags": {
              "Name": "Web_server",
              "createdby": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "Web_server",
              "createdby": "arajkumar@presidio.com"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0009672f7a72c9036"
            ]
          },
          "dependencies": [
            "aws_db_instance.db",
            "aws_security_group.sg",
            "aws_subnet.pubsub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:590852515231:instance/i-07185cb0233c648c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07185cb0233c648c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "arajkumar",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d46e4b39ee59975d",
            "private_dns": "ip-27-0-2-234.us-east-2.compute.internal",
            "private_ip": "27.0.2.234",
            "public_ip": "3.15.39.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0918f2882586cd496",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0009672f7a72c9036"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0294d448b9df8c4ff",
            "tags": {
              "Name": "Web_server",
              "createdby": "arajkumar@presidio.com"
            },
            "tags_all": {
              "Name": "Web_server",
              "createdby": "arajkumar@presidio.com"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0009672f7a72c9036"
            ]
          },
          "dependencies": [
            "aws_db_instance.db",
            "aws_security_group.sg",
            "aws_subnet.pubsub"
          ]
        }
      ]
    }
  ]
}